packages/orangewind/src/components/links.css
@theme {
  /* Link Icons */
  --icon-ow-link-top: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 4.349l4.685 4.684-.884.884-3.052-3.051.001 7.526h-1.5V6.866L4.2 9.917l-.885-.884L8 4.35zm7.025-3.099v1.5H1.051v-1.5h13.974z' fill='black' fill-rule='nonzero'/%3E%3C/svg%3E");
  --icon-ow-link-anchor: url("data:image/svg+xml,%3Csvg width='16' height='16' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8.781 4.772c.976.683 1.5 1.77 1.508 2.876l-.065.105c-.317.457-.88.637-1.308.399a.831.831 0 01-.162-.117A2.036 2.036 0 005.177 6.38l-.091.121L2.832 9.72a2.036 2.036 0 003.243 2.456l.092-.121.114-.162a3.582 3.582 0 001.34.7l-.225.322a3.536 3.536 0 11-5.792-4.056L3.857 5.64a3.536 3.536 0 014.924-.868zm4.747-3.042a3.536 3.536 0 01.868 4.924l-2.253 3.218A3.536 3.536 0 015.71 7.865l.065-.105c.317-.458.88-.637-1.308-.4.06.033.113.073.162.117a2.036 2.036 0 003.577 1.656l.091-.121 2.254-3.218a2.036 2.036 0 00-3.243-2.457l-.092.122-.114.162a3.582 3.582 0 00-1.34-.701l.225-.322a3.536 3.536 0 014.924-.868z' fill='black' fill-rule='nonzero'/%3E%3C/svg%3E");
}

@layer base {
  a {
    color: var(--color-ow-link);
    text-decoration: none;
    outline: none; /* Base reset */

    &:focus,
    &:focus-visible {
      outline: 3px solid var(--color-ow-focus);
      outline-offset: -3px;
    }

    &:focus:not(:focus-visible) {
      outline: 0;
      outline-offset: 0;
    }

    &:hover {
      cursor: pointer;
      text-decoration: underline;
      text-decoration-thickness: 1px;
      text-underline-offset: 0.075em;
    }

    &:visited {
      color: var(--color-ow-link-visited);
    }
  }
}

@layer components {
  /* Pattern: Soft Links */
  .ow-link-soft {
    color: var(--color-ow-text-default);

    &:visited {
      color: var(--color-ow-text-default);
      text-decoration: none;
    }

    &:hover {
      color: var(--color-ow-link);
    }

    &.is-selected {
      font-weight: var(--font-weight-bold, 700);
    }
  }

  /* Pattern: Inverted Links */
  .ow-link-inverted {
    color: var(--color-ow-text-default);
    font-weight: var(--font-weight-bold, 700);

    &:hover {
      color: var(--color-ow-text-default);
    }

    &:visited {
      color: var(--color-ow-text-muted);
    }
  }

  /* Pattern: Skip Link */
  .ow-link-skip {
    background-color: var(--color-ow-background-alt);
    color: var(--color-ow-link);
    display: block;
    left: -999px;
    position: absolute;
    top: -999px;

    &:focus {
      outline: 3px solid var(--color-ow-focus);
      outline-offset: -3px;
      left: 0.5rem;
      padding: 1rem 1rem;
      position: fixed;
      top: 0.5rem;
      z-index: 999999;
    }
  }

  /* Pattern: Top Link wrapper */
  .ow-top {
    align-items: center;
    display: flex;
    gap: 0.5rem;

    &::before {
      border-bottom: 1px solid var(--color-ow-border-default);
      content: '';
      flex-grow: 1;
      margin: 1.5rem 0 calc(1.5rem - 1px) 0;
    }

    &::after {
      /* Icon back-to-top */
      content: '';
      background-color: currentColor;
      mask-image: var(--icon-ow-link-top);
      mask-repeat: no-repeat;
      mask-position: center;
      mask-size: contain;
      display: inline-block;
      width: 1rem;
      height: 1rem;
      vertical-align: middle;
    }
  }

  /* Pattern: Top Link Element */
  .ow-top-link {
    color: var(--color-ow-text-default);
    padding: 0 0.5rem 0 1rem;
    text-decoration: none;
  }

  /* Pattern: Anchor Heading Link */
  .ow-link-anchor-heading {
    color: var(--color-ow-text-default);
    display: inline-flex;
    align-items: baseline;
    gap: 0.5rem;

    &:visited {
      color: var(--color-ow-text-default);
    }

    &::after {
      /* Icon get-link */
      content: '';
      background-color: currentColor;
      mask-image: var(--icon-ow-link-anchor);
      mask-repeat: no-repeat;
      mask-position: center;
      mask-size: contain;
      display: inline-block;
      width: 1rem;
      height: 1rem;
      vertical-align: baseline;
      padding: 0.5rem 0.5rem;
      visibility: hidden;
    }

    &:hover::after,
    &:focus::after {
      visibility: visible;
    }
  }
}

